[package]
name = "wasm-tls-parser"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"
description = "Example WASM module for suricata: TLS parser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "5.0"
tls-parser = "0.9"
wasm-bindgen = "0.2"
wasm-sc-guest = { git="https://github.com/chifflier/wasm-sc-guest" }
x509-parser = "0.8.0"
